fixed wrap problems

--- a/scss/main.css
+++ b/scss/main.css
@@ -688,7 +688,7 @@ footer .right .right-2 {
 }
 
 .blog-section1 {
-  width: 580px;
+  width: 565px;
   padding: 30px 0;
   display: flex;
   gap: 30px;
